<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/nav_chat" />
    <item
        android:id="@+id/nav_album"
        android:icon="@drawable/ic_nav_album"
        android:title="@string/nav_album" />
    <item
        android:id="@+id/nav_video"
        android:icon="@drawable/ic_nav_video"
        android:title="@string/nav_video" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
